# work-time-recorder

./: .gitignore  README.md  stack.yaml  swagger.json  wtr.cabal
postgres/: docker-compose.yml
postgres/init/: init.sql
src/: Lib.hs
src/Domain/: Project.hs  WorkTime.hs
src/Infrastructure/: DataSource.hs
src/Infrastructure/Query/: ProjectQuery.hs
src/Infrastructure/Table/: Project.hs
src/Presentation/: ProjectListView.hs
