name:                wtr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wtr#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Presentation.ProjectListView
                     , Domain.Project
                     , Domain.WorkTime
                     , Infrastructure.DataSource
                     , Infrastructure.Table.Project
                     , Infrastructure.Query.ProjectQuery
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , HDBC
                     , HDBC-postgresql
                     , relational-query-HDBC
                     , relational-query
                     , servant-swagger
                     , swagger2
                     , bytestring
  default-language:    Haskell2010

executable wtr-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , wtr
  default-language:    Haskell2010

test-suite wtr-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wtr
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/wtr
